# lib/api-spec/openapi.yaml
@@ -456,11 +456,20 @@ components:
               type: integer
             extras:
               type: integer
+            weather:
+              type: integer
+            traffic:
+              type: integer
+            staffAvailability:
+              type: integer
           required:
             - base
             - demand
             - timeSlot
             - extras
+            - weather
+            - traffic
+            - staffAvailability
         factorsApplied:
           type: object
           properties:
@@ -468,9 +477,18 @@ components:
               type: number
             timeSlot:
               type: number
+            weather:
+              type: number
+            traffic:
+              type: number
+            staffAvailability:
+              type: number
           required:
             - demand
             - timeSlot
+            - weather
+            - traffic
+            - staffAvailability
         validUntil:
           type: string
       required:
